<resources>
    <string name="app_name">Hw_6_5_m</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="history">History</string>
    <string name="calculate">calculate</string>
    <string name="Calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="add_to_history">Add to history</string>
    <string name="me">me</string>
    <string name="you">you</string>
    <string name="title">Title</string>
    <string name="maybe">We have made the correction for you don\'t worry Maybe someone is waiting for you!</string>
    <string name="description">description</string>
    <string name="start">start</string>
</resources>