<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.main.MainFragment">

    <ImageView
        android:id="@+id/main_img"
        android:src="@drawable/img_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <TextView
        android:id="@+id/txt_love_calculator"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/main_img"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/love_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@id/ed_first_name"
        app:layout_constraintStart_toStartOf="@id/ed_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:id="@+id/ed_first_name"
        android:background="@drawable/input_types"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/txt_love_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <TextView
        android:textSize="20sp"
        android:textColor="@color/red"
        android:layout_marginBottom="4dp"
        android:text="@string/second_name"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/ed_second_name"
        app:layout_constraintStart_toStartOf="@id/ed_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/ed_second_name"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/ed_first_name"
        android:background="@drawable/input_types"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/btn_calculate"
        android:textAllCaps="false"
        android:text="@string/Calculate"
        android:backgroundTint="@color/red"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ed_second_name"
        app:layout_constraintEnd_toEndOf="@id/ed_second_name"
        app:layout_constraintStart_toStartOf="@id/ed_second_name"
        android:layout_width="0dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/txt_to_history"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_to_history"
        android:src="@drawable/history"
        app:layout_constraintEnd_toEndOf="@id/txt_to_history"
        app:layout_constraintStart_toStartOf="@id/txt_to_history"
        app:layout_constraintBottom_toTopOf="@id/txt_to_history"
        android:layout_width="60dp"
        android:layout_height="60dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>