<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.result.ResultFragment">

    <ImageView
        android:id="@+id/img_result"
        android:src="@drawable/img_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <View
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/img_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>

    <TextView
        android:id="@+id/txt_first_name_result"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_result"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/plus"
        android:src="@drawable/ic_baseline_add_24"
        android:layout_marginVertical="20dp"
        app:layout_constraintEnd_toEndOf="@id/txt_first_name_result"
        app:layout_constraintStart_toStartOf="@id/txt_first_name_result"
        app:layout_constraintTop_toBottomOf="@id/txt_first_name_result"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/txt_second_name_result"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:text="@string/second_name"
        app:layout_constraintTop_toBottomOf="@id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_result_result"
        android:textSize="30sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/result"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/equal"
        app:layout_constraintEnd_toEndOf="@id/txt_second_name_result"
        app:layout_constraintStart_toStartOf="@id/txt_second_name_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/equal"
        android:src="@drawable/equal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_second_name_result"
        app:layout_constraintEnd_toEndOf="@id/txt_second_name_result"
        app:layout_constraintStart_toStartOf="@id/txt_second_name_result"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/txt_to_history_result"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:text="@string/add_to_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_to_history_result"
        android:src="@drawable/history"
        app:layout_constraintBottom_toTopOf="@id/txt_to_history_result"
        app:layout_constraintEnd_toEndOf="@id/txt_to_history_result"
        app:layout_constraintStart_toStartOf="@id/txt_to_history_result"
        android:layout_width="60dp"
        android:layout_height="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>